<resources>
    <string name="app_name">Brazuk</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="more">More</string>
    <string name="action_watch">Watch</string>
    <string name="action_download">Download</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>

    <string name="placeholder_film_title" translatable="false">Alma Augusta</string>
    <string name="placeholder_film_description" translatable="false">O poeta Augusto dos Anjos (Josinaldo Ferreira) vive com sua esposa Esther Fialho (Dayanny Gleycy) e os filhos em Leopoldina. Depois de peregrinar pela Paraíba e pelo Rio, ele consegue um bom trabalho em Minas Gerais. Mas uma pneumonia o acomete. E em poucos meses, a alegria do novo lar se transforma em pesadelo.</string>
    <string name="content_description_film_cover">Film Cover</string>
    <string name="action_home">Home</string>
    
    <string name="preference_file_key" translatable="false">brazuk_app_prefs</string>
</resources>