<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="20dp"
    android:paddingVertical="24dp"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <ImageView
        android:id="@+id/iv_film_cover"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:contentDescription="@string/content_description_film_cover"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_film_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/placeholder_film_title"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_film_cover"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_film_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:maxHeight="119dp"
        android:text="@string/placeholder_film_description"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/tv_film_title"
        app:layout_constraintStart_toEndOf="@id/iv_film_cover"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btn_watch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_watch"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:paddingHorizontal="30dp"
        app:layout_constraintTop_toBottomOf="@id/iv_film_cover"
        app:layout_constraintStart_toStartOf="parent"
        app:icon="@drawable/ic_play_arrow_24" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_download"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        app:icon="@drawable/ic_file_download_24"
        app:iconPadding="0dp"
        app:iconGravity="textStart"
        app:layout_constraintTop_toBottomOf="@id/iv_film_cover"
        app:layout_constraintStart_toEndOf="@id/btn_watch"
        style="@style/Widget.App.Button.TextButton.Icon" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_add_to_my_list"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginStart="5dp"
        app:icon="@drawable/ic_add_24"
        app:iconPadding="0dp"
        app:iconGravity="textStart"
        app:layout_constraintTop_toBottomOf="@id/iv_film_cover"
        app:layout_constraintStart_toEndOf="@id/btn_download"
        style="@style/Widget.App.Button.TextButton.Icon" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_more_info"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        app:icon="@drawable/ic_info_24"
        app:iconPadding="0dp"
        app:iconGravity="textStart"
        app:layout_constraintTop_toBottomOf="@id/iv_film_cover"
        app:layout_constraintStart_toEndOf="@id/btn_add_to_my_list"
        style="@style/Widget.App.Button.TextButton.Icon" />

</androidx.constraintlayout.widget.ConstraintLayout>